--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,7 +6,7 @@ tasks:
       python3.9 -m pip install --upgrade pip
       source venv/bin/activate
       pip install -e .[all]
-    command: cd python/; source venv/bin/activate # Always launch a console with our virtual env
+    command: source venv/bin/activate # Always launch a console with our virtual env
 
 vscode:
   extensions:
