--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "python.linting.flake8Enabled": true,
     "python.linting.enabled": true,
     "python.formatting.provider": "black",
+    "python.defaultInterpreterPath": "./venv/bin/python",
     "python.testing.unittestArgs": [
         "-v",
         "-s",
