--- a/.github/workflows/python-build-artifacts.yml
+++ b/.github/workflows/python-build-artifacts.yml
@@ -33,4 +33,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: aac_wheel
-          path: python/dist/
+          path: dist/
