--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -1,10 +1,6 @@
 on:
   workflow_call:
 
-defaults:
-  run:
-    working-directory: ./python
-
 jobs:
   python_tests:
     name: Python ${{ matrix.py_version }} Tests
@@ -40,5 +36,5 @@ jobs:
       if: matrix.py_version == '3.9.13'
       with:
         name: test-coverage-report
-        path: python/html_code_coverage/
+        path: html_code_coverage/
 
