Added an example test and ignored __main__.py from code coverage.

--- a/tox.ini
+++ b/tox.ini
@@ -50,6 +50,7 @@ show_missing = True
 skip_empty = True
 skip_covered = True
 sort = cover
+omit = */__main__.py
 
 [html]
 # https://coverage.readthedocs.io/en/latest/config.html#html
