--- a/.github/workflows/python-build-artifacts.yml
+++ b/.github/workflows/python-build-artifacts.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           python-version: 3.9
 
-      - name: Install the AaC Package
+      - name: Install the Python Package
         run: pip install -e .[all]
 
       - name: List Transitive Dependencies
@@ -32,5 +32,5 @@ jobs:
       - name: Upload Python Wheel
         uses: actions/upload-artifact@v2
         with:
-          name: aac_wheel
+          name: wheel
           path: dist/
