--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -19,7 +19,7 @@ jobs:
       with:
         python-version: ${{ matrix.py_version }}
 
-    - name: Install the AaC Package
+    - name: Install the Python Package
       run: pip install -e .[all]
 
     - name: Run Tox Tests
